@@ -1,5 +1,14 @@
 2008-01-19  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold)
+	(layout.fruchterman.reingold.grid, layout.kamada.kawai) 
+	* interfaces/R/src/rinterface.c.in (R_igraph_layout_kamada_kawai)
+	(R_igraph_layout_kamada_kawai_3d, R_igraph_layout_fruchterman_reingold_grid)
+	(R_igraph_layout_fruchterman_reingold) : initial position support
+
+	* interfaces/R/igraph/R/layout.R (layout.graphopt) 
+	* interfaces/R/src/rinterface.c.in (R_igraph_layout_graphopt) : added
+
 	* interfaces/R/igraph/R/plot.R (plot.igraph)
 	* interfaces/R/igraph/R/plot.common.R (i.default.values) : 'frame' added
 
